--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,43 @@
-{% extends 'layout.html' %}
-
-{% block title %}Your Trip{% endblock %}
-
-{% block content %}
+{% extends 'layout.html' %} {% block title %}Your Trip{% endblock %} {% block content %}
 <div id="app" class="clearfix">
-  <h1>Hello, I am the app!</h1>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">
+					<ul class="nav nav-pills">
+						<li role="presentation" class="active"><a href="#">Home</a></li>
+						<li role="presentation"><a href="#">Profile</a></li>
+						<li role="presentation"><a href="#">Messages</a></li>
+					</ul>
+				</a>
+			</div>
+		</div>
+	</nav>
+  <div class="map-container col-md-8">
+    <div id="map-canvas">
+    <!--map goes here-->
+    </div>
+  </div>
+  <div id="lists" class="col-md-4">
+    <!--list goes here-->
+    <div class="item">
+      <h1>Hotels</h1>
+      <select></select>
+      <button>x</button>
+    </div>
+    <div class="item">
+      <h1>Restaurants</h1>
+      <select></select>
+      <button>x</button>
+    </div>
+    <div class="item">
+      <h1>Activities</h1>
+      <select></select>
+      <button>x</button>
+    </div>
+  </div>
+  <div id="day-picker" class="col-md-4">
+    <!--list goes here-->
+  </div>
 </div>
 {% endblock %}
