--- a/views/layout.html
+++ b/views/layout.html
@@ -3,8 +3,8 @@
   <title>Trip Planner - {% block title %}{% endblock %}</title>
   <head>
     <!-- Stylesheets go here! -->
-    <link href="/stylesheets/style.css" rel="stylesheet">
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/style.css" rel="stylesheet">
   </head>
   <body>
 
@@ -12,7 +12,8 @@
     {% endblock %}
 
     <!-- Script tags go here! -->
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANAhMm5smJTK4_530N7lyYbuHOI_Qk8m8&sensor=true"></script>
     <script src="/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="/map.js" type="text/javascript"></script>
   </body>
 </html>
